# matrices

./: Cargo.toml
src/: const_matrix.rs  lib.rs  matrix_packed.rs  traits.rs  vec_matrix.rs
