[package]
name = "matrices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1", features = ["derive"] }
serde_with = "2.1"
num-traits = "0.2"
quad-rand = { git = "https://github.com/not-fl3/quad-rand" }
