[package]
name = "matrices"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1", features = ["derive"], optional = true }
serde_with = { version = "2.1", optional = true }
num-traits = "0.2"
quad-rand = { git = "https://github.com/not-fl3/quad-rand" }

[features]
serde = ["dep:serde", "dep:serde_with"]
